--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog <span id="tagline">tu blog de confianza</span>
+                Hyperblog <span id="tagline">tu blog de Maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo 
@@ -21,6 +21,9 @@
                 Mucho mas que ir a conferencias o 
                 salir en Youtube. Excepto si eres un rockstar.
                 Pero estadísticamente no lo eres ... por ahora.
+            </p>
+            <p>
+                Suscribete y dale like
             </p>
             </div>
         </div>
