--- a/blogpost.html
+++ b/blogpost.html
@@ -13,9 +13,9 @@
             <div id="post">
                 <h1>Este es el titulo atractivo 
                     e interesante del post</h1>
-                <p>Y este es el parrafo de inicio 
+                <p>Y este es el párrafo de inicio 
                     donde vamos a explicar las cosas 
-                    increibles que se pueden
+                    increíbles que se pueden
                      hacer con la ramas</p>
             <p>
                 Los blogs son la mejor forma de
